--- a/pom.xml
+++ b/pom.xml
@@ -23,13 +23,16 @@
         <java.version>1.8</java.version>
     </properties>
 
-    <dependencies>
 
-    </dependencies>
 
     <build>
         <pluginManagement>
             <plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>2.19.1</version>
+                </plugin>
                 <plugin>
                     <groupId>org.springframework.boot</groupId>
                     <artifactId>spring-boot-maven-plugin</artifactId>
