--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
                 <configuration>
+                    <localCheckout>true</localCheckout>
                     <goals>install</goals>
                    <autoVersionSubmodules>true</autoVersionSubmodules>
                 </configuration>
