--- a/release.properties
+++ b/release.properties
@@ -1,11 +1,22 @@
 #release configuration
-#Wed Mar 03 15:39:27 CET 2021
+#Wed Mar 03 15:40:58 CET 2021
 projectVersionPolicyId=default
-scm.tagNameFormat=@{project.artifactId}-@{project.version}
 remoteTagging=true
 scm.commentPrefix=[maven-release-plugin] 
-pushChanges=true
-completedPhase=check-poms
+project.dev.pavlo.springframework\:sfg-pet-clinic=0.0.2-SNAPSHOT
+project.scm.pavlo.springframework\:sfg-pet-clinic.developerConnection=scm\:git\:https\://github.com/PavloVovnyuk/sfg-pet-clinic.git
+project.rel.pavlo.springframework\:pet-clinic-web=0.0.1
+completedPhase=generate-release-poms
 scm.url=scm\:git\:https\://github.com/PavloVovnyuk/sfg-pet-clinic.git
+project.scm.pavlo.springframework\:pet-clinic-web.empty=true
+project.rel.pavlo.springframework\:sfg-pet-clinic=0.0.1
+project.scm.pavlo.springframework\:sfg-pet-clinic.tag=sfg-pet-clinic-0.0.1
+project.scm.pavlo.springframework\:pet-clinic-data.empty=true
+scm.tagNameFormat=@{project.artifactId}-@{project.version}
+project.dev.pavlo.springframework\:pet-clinic-web=0.0.2-SNAPSHOT
+pushChanges=true
+scm.tag=sfg-pet-clinic-0.0.1
+project.rel.pavlo.springframework\:pet-clinic-data=0.0.1
 exec.snapshotReleasePluginAllowed=false
 preparationGoals=clean verify
+project.dev.pavlo.springframework\:pet-clinic-data=0.0.2-SNAPSHOT
